# ecommerce-fraud-env

./: Dockerfile  README.md  TODO.md  __init__.py  assessment_output.json  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_assessment.sh  tasks.py  test_parse_2.py
openenv_ecommerce_fraud_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
openenv_support_triage_env.egg-info/: PKG-INFO  SOURCES.txt
server/: __init__.py  app.py  fraud_environment.py
tests/: test_graders.py
